--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -38,5 +38,8 @@
     "saldo-restante": "Remaining balance",
     "valor-desse-mes": "Value of this month:",
     "adicione-valor-total-descontado": "Add the total value to be deducted",
-    "digite-saldo-que-sera-descontado": "Enter the balance to which the value of this month will be deducted:"
+    "digite-saldo-que-sera-descontado": "Enter the balance to which the value of this month will be deducted:",
+    "para-permitir-que-o-payplan": "To enable Payplan to deliver personalized notifications, it is necessary to allow notifications in the settings.",
+    "abrir-configuracoes": "Open settings",
+    "nao-perca-data-pagamento": "Don't miss the payment due date of your invoice."
 }
