--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -42,5 +42,7 @@
     "para-permitir-que-o-payplan": "To enable Payplan to deliver personalized notifications, it is necessary to allow notifications in the settings.",
     "para-permitir-que-o-payplan-admob": "To enable Payplan to deliver personalized ads, it is necessary to allow Tracking in the settings.",
     "abrir-configuracoes": "Open settings",
-    "nao-perca-data-pagamento": "Don't miss the payment due date of your invoice."
+    "nao-perca-data-pagamento": "Don't miss the payment due date of your invoice.",
+    "grafico-gastos": "Expense charts",
+    "voltar": "Go back"
 }
