--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -8,6 +8,10 @@
     "add-novo-cartao": "You don't have any registered cards",
     "nome-cartao": "Card name:",
     "nome-divida": "Debt name:",
+    "parcelada": "Installment",
+    "quantidade-parcelas": "Number of installments",
+    "valor-parcela": "Installment value",
+    "nao-pode-modificar": "*Cannot be modified later",
     "salvar": "Save",
     "cancelar": "Cancel",
     "digite-o-nome-carto": "Enter the card name...",
