--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -10,6 +10,10 @@
     "nome-divida": "Nombre de la deuda:",
     "salvar": "Guardar",
     "cancelar": "Cancelar",
+    "parcelada": "Cuota",
+    "valor-parcela": "Valor de la cuota",
+    "nao-pode-modificar": "*No se puede modificar más tarde",
+    "quantidade-parcelas": "Cantidad de cuotas",
     "digite-o-nome-carto": "Ingrese el nombre de la tarjeta...",
     "digite-o-nome-divida": "Ingrese el nombre de la deuda...",
     "digite-o-valor-fatura": "Ingrese el monto de la factura",
