--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -13,6 +13,8 @@
     "digite-o-nome-carto": "Digite o nome do cartão...",
     "digite-o-nome-divida": "Digite o nome da dívida...",
     "digite-o-valor-fatura": "Digite o valor da fatura",
+    "valor-parcela": "Valor da parcela",
+    "nao-pode-modificar": "*Não pode ser modificado depois",
     "digite-o-valor-do-saldo": "Digite o valor do saldo",
     "limpar-tudo": "Limpar tudo",
     "cor-do-cartao": "Cor do cartão",
@@ -29,6 +31,8 @@
     "total": "Total de gastos",
     "mensal": "Mensal",
     "unica": "Única",
+    "parcelada": "Parcelas",
+    "quantidade-parcelas": "Quantidade de parcelas",
     "esse-novo-cartao": "O cartão será salvo para todos os meses subsequentes",
     "essa-nova-divida": "O clique na opção que atenda seu tipo de dívida para salvar",
     "esse-cartao-sera-removido": "O cartão será deletado de todos os meses subsequentes",
