--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -11,6 +11,7 @@
     "salvar": "Guardar",
     "cancelar": "Cancelar",
     "parcelada": "Cuota",
+    "devedores": "Deudores",
     "valor-parcela": "Valor de la cuota",
     "nao-pode-modificar": "*No se puede modificar más tarde",
     "quantidade-parcelas": "Cantidad de cuotas",
