--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -10,6 +10,7 @@
     "nome-divida": "Nombre de la deuda:",
     "salvar": "Guardar",
     "cancelar": "Cancelar",
+    "permitirNotificacoes": "Permitir notificaciones",
     "parcelada": "Cuota",
     "dividas": "Deudas",
     "devedores": "Deudores",
