--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -10,6 +10,7 @@
     "nome-divida": "Nome da dívida:",
     "salvar": "Salvar",
     "cancelar": "Cancelar",
+    "permitirNotificacoes": "Permitir notificações",
     "dividas": "Dívidas",
     "devedores": "Devedores",
     "digite-o-nome-carto": "Digite o nome do cartão...",
