--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -36,6 +36,7 @@
     "total": "Total:",
     "mensal": "Monthly",
     "unica": "One-time",
+    "salario": "Salary",
     "esse-novo-cartao": "The card will be saved for all subsequent months",
     "essa-nova-divida": "Click on the option that best fits your type of debt to save",
     "esse-cartao-sera-removido": "The card will be deleted from all subsequent months",
