--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -47,8 +47,9 @@
     "divida-externa": "(Dívida externa)",
     "saldo-restante": "Saldo restante",
     "valor-desse-mes": "Valor desse mês:",
-    "adicione-valor-total-descontado": "Adicione o valor total que será descontado",
-    "digite-saldo-que-sera-descontado": "Digite o saldo em que será descontado o valor desse mês:",
+    "adicione-valor-total-descontado": "Adicione o seu salário que será descontado",
+    "salario": "Salário",
+    "digite-saldo-que-sera-descontado": "Digite o salário que será descontado o valor desse mês:",
     "para-permitir-que-o-payplan": "Para permitir que o Payplan consiga entregar notificações personalizadas, é preciso pemitir as notificações nas configurações",
     "para-permitir-que-o-payplan-admob": "Para permitir que o Payplan consiga entregar anúncios personalizados, é preciso pemitir o rastreamento nas configurações",
     "abrir-configuracoes": "Abrir configurações",
