--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -47,6 +47,7 @@
     "divida-externa": "(Deuda externa)",
     "saldo-restante": "Saldo restante",
     "valor-desse-mes": "Valor de este mes:",
+    "salario": "Salario",
     "adicione-valor-total-descontado": "Agregue el valor total a ser descontado",
     "digite-saldo-que-sera-descontado": "Ingrese el saldo al cual se descontará el valor de este mes:",
     "para-permitir-que-o-payplan": "Para permitir que Payplan pueda enviar notificaciones personalizadas, es necesario permitir las notificaciones en la configuración.",
