--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -55,5 +55,7 @@
     "abrir-configuracoes": "Abrir configuraciones",
     "nao-perca-data-pagamento": "No pierda la fecha de pago de su factura.",
     "grafico-gastos": "Gráficos de gastos",
-    "voltar": "Volver"
+    "voltar": "Volver",
+    "compartilhar": "Compartir",
+    "baixePayplan": "Descargue Payplan y tenga control total de sus finanzas\n\nAndroid: https://play.google.com/store/apps/details?id=com.andre.notes_app\n\nIOS: https://apps.apple.com/br/app/payplan/id6450763738"
 }
