--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -55,5 +55,7 @@
     "abrir-configuracoes": "Open settings",
     "nao-perca-data-pagamento": "Don't miss the payment due date of your invoice.",
     "grafico-gastos": "Expense charts",
-    "voltar": "Go back"
+    "voltar": "Go back",
+    "compartilhar": "Share",
+    "baixePayplan": "Download Payplan and have full control of your finances\n\nAndroid: https://play.google.com/store/apps/details?id=com.andre.notes_app\n\nIOS: https://apps.apple.com/br/app/payplan/id6450763738"
 }
