--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -55,5 +55,7 @@
     "abrir-configuracoes": "Abrir configurações",
     "nao-perca-data-pagamento": "Não perca a data de pagamento das suas faturas",
     "grafico-gastos": "Gráficos de gastos",
-    "voltar": "Voltar"
+    "voltar": "Voltar",
+    "compartilhar": "Compartilhar",
+    "baixePayplan": "Baixe o Payplan e tenha controle total das suas finanças\n\nAndroid: https://play.google.com/store/apps/details?id=com.andre.notes_app\n\nIOS: https://apps.apple.com/br/app/payplan/id6450763738"
 }
