--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -65,5 +65,7 @@
     "dividasPendentes": "Dívidas Pendentes",
     "voceTemUmaDividaCom": "Você tem uma dívida com",
     "noValorDe": "no valor de",
-    "notificar": "Notificar"
+    "notificar": "Notificar",
+    "novaVersaoDisp": "Nova versão disponível, atualize para continuar utilizando o Payplan",
+    "atualizar": "Atualizar"
 }
