feat: colocando opcao de pix

--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -57,7 +57,7 @@
     "grafico-gastos": "Gráficos de gastos",
     "voltar": "Volver",
     "compartilhar": "Compartir",
-    "baixePayplan": "Descargue Payplan y tenga control total de sus finanzas\n\nAndroid: https://play.google.com/store/apps/details?id=com.andre.notes_app\n\nIOS: https://apps.apple.com/br/app/payplan/id6450763738",
+    "baixePayplan": "Descargue Payplan y tenga control total de sus finanzas",
     "novo-devedor": "Nuevo deudor",
     "nome-devedor": "Nombre del deudor",
     "valor": "Valor",
