--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -57,7 +57,7 @@
     "grafico-gastos": "Gráficos de gastos",
     "voltar": "Voltar",
     "compartilhar": "Compartilhar",
-    "baixePayplan": "Baixe o Payplan e tenha controle total das suas finanças\n\nAndroid: https://play.google.com/store/apps/details?id=com.andre.notes_app\n\nIOS: https://apps.apple.com/br/app/payplan/id6450763738",
+    "baixePayplan": "Baixe o Payplan e tenha controle total das suas finanças",
     "novo-devedor": "Novo devedor",
     "nome-devedor": "Nome do devedor",
     "valor": "Valor",
