nova versao com pagamentos

--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -67,5 +67,9 @@
     "noValorDe": "for a value of",
     "notificar": "Notify",
     "novaVersaoDisp": "New version available, update now!",
-    "atualizar": "Update"
+    "atualizar": "Update",
+    "semAnuncios": "No ads",
+    "removaTodosAnuncios": "Remove all ads and support the project",
+    "aproveiteSemAnuncios": "Enjoy the app without ads"
+
 }
