--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -67,5 +67,10 @@
     "noValorDe": "por un valor de",
     "notificar": "Notificar",
     "novaVersaoDisp": "¡Nueva versión disponible!, actualiza para continuar utilizando Payplan",
-    "atualizar": "Actualizar"
+    "atualizar": "Actualizar",
+    "semAnuncios": "Sin anuncios",
+    "removaTodosAnuncios": "¡Elimina todos los anuncios de Payplan y apoya nuestro trabajo!",
+    "aproveiteSemAnuncios": "¡Disfruta de Payplan sin anuncios!"
+
+
 }
