--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -67,5 +67,8 @@
     "noValorDe": "no valor de",
     "notificar": "Notificar",
     "novaVersaoDisp": "Nova versão disponível, atualize para continuar utilizando o Payplan",
-    "atualizar": "Atualizar"
+    "atualizar": "Atualizar",
+    "semAnuncios": "Sem anúncios",
+    "removaTodosAnuncios": "Remova todos os anúncios do Payplan e apoie nosso trabalho!",
+    "aproveiteSemAnuncios": "Parabéns!\nAgora aproveite o app sem anúncios."
 }
