nova versao com pagamentos

--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -69,6 +69,6 @@
     "novaVersaoDisp": "Nova versão disponível, atualize para continuar utilizando o Payplan",
     "atualizar": "Atualizar",
     "semAnuncios": "Sem anúncios",
-    "removaTodosAnuncios": "Remova todos os anúncios do Payplan e apoie nosso trabalho!",
+    "removaTodosAnuncios": "Remova todos os anúncios do Payplan",
     "aproveiteSemAnuncios": "Parabéns!\nAgora aproveite o app sem anúncios."
 }
