feat: novo efeito de glass

--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -70,6 +70,7 @@
     "atualizar": "Update",
     "semAnuncios": "No ads",
     "removaTodosAnuncios": "Remove all ads and support the project",
-    "aproveiteSemAnuncios": "Enjoy the app without ads"
+    "aproveiteSemAnuncios": "Enjoy the app without ads",
+    "graficos": "Charts"
 
 }
