--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -70,7 +70,8 @@
     "atualizar": "Actualizar",
     "semAnuncios": "Sin anuncios",
     "removaTodosAnuncios": "¡Elimina todos los anuncios de Payplan y apoya nuestro trabajo!",
-    "aproveiteSemAnuncios": "¡Disfruta de Payplan sin anuncios!"
+    "aproveiteSemAnuncios": "¡Disfruta de Payplan sin anuncios!",
+    "graficos": "Gráficos"
 
 
 }
