--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -70,5 +70,6 @@
     "atualizar": "Atualizar",
     "semAnuncios": "Sem anúncios",
     "removaTodosAnuncios": "Remova todos os anúncios do Payplan",
-    "aproveiteSemAnuncios": "Parabéns!\nAgora aproveite o app sem anúncios."
+    "aproveiteSemAnuncios": "Parabéns!\nAgora aproveite o app sem anúncios.",
+    "graficos": "Gráficos"
 }
