correcao de bug nos devedores

--- a/lib/i18n/en_US.json
+++ b/lib/i18n/en_US.json
@@ -71,6 +71,7 @@
     "semAnuncios": "No ads",
     "removaTodosAnuncios": "Remove all ads and support the project",
     "aproveiteSemAnuncios": "Enjoy the app without ads",
-    "graficos": "Charts"
+    "graficos": "Charts",
+    "mensagem": "Message"
 
 }
