--- a/lib/i18n/es_ES.json
+++ b/lib/i18n/es_ES.json
@@ -71,7 +71,8 @@
     "semAnuncios": "Sin anuncios",
     "removaTodosAnuncios": "¡Elimina todos los anuncios de Payplan y apoya nuestro trabajo!",
     "aproveiteSemAnuncios": "¡Disfruta de Payplan sin anuncios!",
-    "graficos": "Gráficos"
+    "graficos": "Gráficos",
+    "mensagem": "Mensaje"
 
 
 }
