--- a/lib/i18n/pt_BR.json
+++ b/lib/i18n/pt_BR.json
@@ -71,5 +71,6 @@
     "semAnuncios": "Sem anúncios",
     "removaTodosAnuncios": "Remova todos os anúncios do Payplan",
     "aproveiteSemAnuncios": "Parabéns!\nAgora aproveite o app sem anúncios.",
-    "graficos": "Gráficos"
+    "graficos": "Gráficos",
+    "mensagem": "Mensagem"
 }
